# flashlearn_v1

./: .gitignore  README.md  package-lock.json  package.json  vite.config.js
.github/workflow/: publish.yml
.github/workflows/: publish.yml  release.yml
scripts/: collect-release-artifacts.mjs  generate-latest-json.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
web/: index.html
web/public/: manifest.webmanifest  sw.js
web/src/: main.js  styles.css
web/src/lib/: sample.js  session.js  storage.js  updates.js
