[package]
name = "flashlearn"
version = "0.1.0"
description = "Flashcard stud"
authors = ["you"]
edition = "2021"

[lib]
name = "flashlearn_lib"
crate-type = ["rlib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.5", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
